# Check-Cloud-Drives

./: .gitignore  .ruffignore  CHANGELOG.md  README.md  config.example.json  config.example.toml  pyproject.toml  pytest.ini  run.sh
assets/fonts/: README.md
assets/icons/: README.md
docs/: index.html
scripts/: ruff.sh  setup_env.sh
src/check_cloud_drives/: __init__.py  config.py  fonts.py  main.py  models.py  rclone.py
src/check_cloud_drives/ui/: __init__.py  card.py  dialogs.py  utils.py  window.py
tests/: README.md  __init__.py  conftest.py  test_card.py  test_config.py  test_models.py  test_rclone.py
