[project]
name = "check-cloud-drives"
version = "0.1.0"
description = "A PySide6 GUI application for monitoring cloud drive status via rclone"
readme = "README.md"
authors = [
    {name = "Rich Lewis"}
]
requires-python = ">=3.11"
dependencies = [
    "PySide6==6.7.3",
    "tomli-w>=1.0.0",
]

[project.scripts]
check-cloud-drives = "check_cloud_drives.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/check_cloud_drives"]

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["src"]
